add test makefile object

--- a/k-thermocouple-lib/Makefile
+++ b/k-thermocouple-lib/Makefile
@@ -6,14 +6,15 @@ NAME = k-c
 STATIC_LIB=lib$(NAME).a
 
 CFLAGS += -DDEBUG=1
-all: 	libk-c clean
+all: 	libk-c ktherm clean
 
 
 libk-c: 
 	$(CC) thermocouple.c -c 
 	ar -cr $(STATIC_LIB) thermocouple.o
 
-
+ktherm:
+	$(CC) $(CFLAGS) -DKTHERM_TEST  thermocouple.c -o ktherm
 
 clean:
 	rm -f *.o
